# on-policy-olmo

./: .gitignore  CLAUDE.md  README.md  distill_off_policy.py  distill_on_policy.py  eval_olmo_models.sh  evals.py  main.py  merge_wandb_runs.py  model_card.md  parse_results.py  pyproject.toml  sweep_lr.sh  sweep_lr_onpolicy.sh
