[project]
name = "on-policy-olmo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "liger-kernel>=0.6.4",
    "torch==2.9.1",
    "torchao>=0.15.0",
    "transformers>=4.44,<5",
    "datasets>=2.0.0",
    "huggingface-hub>=0.20.0",
    "wandb>=0.15.0",
    "flash-attn>=2.8.3",
    "hf-transfer>=0.1.9",
    "vllm>=0.15.0",
]
